fix hovering bug

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -126,7 +126,7 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2554,Y=1360)
+LastSize=(X=2554,Y=1352)
 LastExecutedLaunchDevice=Windows@PC-THEO
 LastExecutedLaunchName=PC-THEO
 LastExecutedPIEPreviewDevice=
@@ -134,7 +134,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2554
-NewWindowHeight=1360
+NewWindowHeight=1352
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -424,6 +424,11 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -434,11 +439,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -472,24 +472,24 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem9=/Game/Textures/EnemyCard
-MRUItem10=/Game/Blueprints/Widget/WBP_Frame
-MRUItem11=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem12=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem13=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem14=/Game/Blueprints/BP_PlayerController
-MRUItem15=/Game/Blueprints/Widget/WBP_Board
-MRUItem16=/Game/Blueprints/Widget/WBP_Card
-MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem0=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem1=/Game/Blueprints/BP_PlayerController
+MRUItem2=/Game/Blueprints/Widget/WBP_Board
+MRUItem3=/Game/Blueprints/Widget/WBP_Card
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem5=/Game/Blueprints/Widget/WBP_Frame
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem9=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem10=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem11=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem12=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem13=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem14=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem15=/Game/Textures/EnemyCard
+MRUItem16=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
 MRUItem18=/Game/Blueprints/Tuto/WBP_CardHand
 MRUItem19=/Game/Materials/M_TestNiagara_UI
 MRUItem20=/Game/Materials/M_TestNiagara
@@ -1381,6 +1381,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1800,7 +1801,6 @@ MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
 MaterialExpressionLinearInterpolate.MaterialExpression=True
 WBP_Card_C.Enemy=True
 WBP_Card_C.Path=True
-Texture2D.Interchange =True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1817,7 +1817,7 @@ VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
 UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Card_C="\"Object\" "
+WBP_Card_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
