maybe an idea to fix the swap in stock issue

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -324,7 +324,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_PlayerController_C=
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 EdGraph=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -440,8 +440,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
@@ -469,6 +469,7 @@ OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor.WBP_DimensionalDoor
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_RogueStock.WBP_RogueStock
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide.WBP_Hide
+OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -481,11 +482,11 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem2=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem3=/Game/Blueprints/Widget/WBP_RogueStock
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem0=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem2=/Game/Blueprints/Widget/WBP_RogueStock
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem4=/Game/Blueprints/Tuto/WBP_SpellCardTuto
 MRUItem5=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
 MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
 MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
@@ -494,10 +495,10 @@ MRUItem9=/Game/Blueprints/BP_PlayerController
 MRUItem10=/Game/Blueprints/Widget/WBP_Board
 MRUItem11=/Game/Blueprints/Widget/WBP_Card
 MRUItem12=/Game/Blueprints/Widget/WBP_Frame
-MRUItem13=/Game/Blueprints/STR_StockCardPosition
-MRUItem14=/Game/Blueprints/STR_CardPosition
-MRUItem15=/Game/Blueprints/Widget/WBP_HorizontalBox
-MRUItem16=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem13=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem14=/Game/Blueprints/STR_StockCardPosition
+MRUItem15=/Game/Blueprints/STR_CardPosition
+MRUItem16=/Game/Blueprints/Widget/WBP_HorizontalBox
 MRUItem17=/Game/Blueprints/E_FrameStatut
 MRUItem18=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
 MRUItem19=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
@@ -2118,8 +2119,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
