fix swap reference issues

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -297,7 +297,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInput
 WmfMediaSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,CommonInputSettings.Input.CommonInputPlatformSettings_Windows
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_SpellCard_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
-K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.RogueStock,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.RogueStock,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.Stats,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -426,8 +426,9 @@ ResizeCard=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.Def
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -457,7 +458,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Frame.WBP_Frame
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
@@ -483,36 +483,36 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem2=/Game/Blueprints/Widget/WBP_RogueStock
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem4=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem9=/Game/Blueprints/BP_PlayerController
-MRUItem10=/Game/Blueprints/Widget/WBP_Board
-MRUItem11=/Game/Blueprints/Widget/WBP_Card
-MRUItem12=/Game/Blueprints/Widget/WBP_Frame
-MRUItem13=/Game/Blueprints/STR_StockFramePosition
-MRUItem14=/Game/Blueprints/STR_FramePositionToMove
-MRUItem15=/Game/Blueprints/STR_StockCardPosition
-MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem17=/Game/Blueprints/STR_CardPosition
-MRUItem18=/Game/Blueprints/Widget/WBP_HorizontalBox
-MRUItem19=/Game/Blueprints/E_FrameStatut
-MRUItem20=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem21=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem22=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem23=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem24=/Game/Blueprints/E_Special
-MRUItem25=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem26=/Game/Blueprints/Widget/WBP_Special
-MRUItem27=/Game/Textures/EnemyCard
-MRUItem28=/Game/Materials/M_TestNiagara_UI
-MRUItem29=/Game/Materials/M_TestNiagara
+MRUItem0=/Game/Blueprints/Tuto/BPI_AddCard
+MRUItem1=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem3=/Game/Blueprints/Widget/WBP_RogueStock
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem5=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem9=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem10=/Game/Blueprints/BP_PlayerController
+MRUItem11=/Game/Blueprints/Widget/WBP_Board
+MRUItem12=/Game/Blueprints/Widget/WBP_Card
+MRUItem13=/Game/Blueprints/Widget/WBP_Frame
+MRUItem14=/Game/Blueprints/STR_StockFramePosition
+MRUItem15=/Game/Blueprints/STR_FramePositionToMove
+MRUItem16=/Game/Blueprints/STR_StockCardPosition
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem18=/Game/Blueprints/STR_CardPosition
+MRUItem19=/Game/Blueprints/Widget/WBP_HorizontalBox
+MRUItem20=/Game/Blueprints/E_FrameStatut
+MRUItem21=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem22=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem23=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem24=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem25=/Game/Blueprints/E_Special
+MRUItem26=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem27=/Game/Blueprints/Widget/WBP_Special
+MRUItem28=/Game/Textures/EnemyCard
+MRUItem29=/Game/Materials/M_TestNiagara_UI
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -2024,7 +2024,7 @@ StackBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTran
 WidgetSwitcher="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_HorizontalBox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_RogueStock_C="\"Object\" \"Object.RogueStock\" "
+WBP_RogueStock_C="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
@@ -2122,8 +2122,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
