resize cards in hand after swapping

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -428,19 +428,19 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -483,20 +483,20 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/BPI_AddCard
-MRUItem1=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem3=/Game/Blueprints/Widget/WBP_RogueStock
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem5=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem9=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem10=/Game/Blueprints/BP_PlayerController
-MRUItem11=/Game/Blueprints/Widget/WBP_Board
-MRUItem12=/Game/Blueprints/Widget/WBP_Card
-MRUItem13=/Game/Blueprints/Widget/WBP_Frame
+MRUItem0=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem2=/Game/Blueprints/Widget/WBP_RogueStock
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem4=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem9=/Game/Blueprints/BP_PlayerController
+MRUItem10=/Game/Blueprints/Widget/WBP_Board
+MRUItem11=/Game/Blueprints/Widget/WBP_Card
+MRUItem12=/Game/Blueprints/Widget/WBP_Frame
+MRUItem13=/Game/Blueprints/Tuto/BPI_AddCard
 MRUItem14=/Game/Blueprints/STR_StockFramePosition
 MRUItem15=/Game/Blueprints/STR_FramePositionToMove
 MRUItem16=/Game/Blueprints/STR_StockCardPosition
@@ -1916,6 +1916,7 @@ WBP_RogueStock_C.Designer=True
 WBP_Card_C.State=True
 WBP_Card_C.References=True
 BP_PlayerController_C.Stock=True
+WBP_DimensionalDoor_C.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1923,9 +1924,9 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
-Object="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
