--- a/RogueLiteMusic/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/RogueLiteMusic/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@CZC3367TFN
 LastExecutedLaunchName=CZC3367TFN
 LastExecutedPIEPreviewDevice=
@@ -195,6 +195,8 @@ EdGraph=PropertyWrapper.DefaultValueCategory.Index_0,K2Node_VariableGet.DefaultV
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Index_0,K2Node_VariableGet.DefaultValueCategory.Index_0
 K2Node=PropertyWrapper.DefaultValueCategory.Index_0,K2Node_VariableGet.DefaultValueCategory.Index_0
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Index_0,K2Node_VariableGet.DefaultValueCategory.Index_0
+K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.Index_0,K2Node_VariableGet.DefaultValueCategory.Index_0
+PlayerController=PropertyWrapper.DefaultValueCategory.Index_0,K2Node_VariableGet.DefaultValueCategory.Index_0
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Widget
@@ -236,9 +238,8 @@ AssetPropertyPicker.ZoomScale=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
@@ -246,6 +247,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -526,6 +528,43 @@ K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 K2Node_SwitchInteger.PinOptions=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Rendering=True
+Widget.Navigation=True
+Widget.Localization=True
+K2Node_CallFunction.Graph=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Rendering=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=1
@@ -822,15 +861,20 @@ RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Collectible.BP_Collectible;
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
-VerticalBox="\"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Index_0\" "
-Visual="\"Object.Index_0\" "
-Object=
-TextBlock="\"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
-WBP_BoonHUD_C="\"Object.Index_0\" "
-UserWidget="\"Object.Index_0\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Object="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+TextBlock="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+TextLayoutWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+WBP_BoonHUD_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Button="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
