add dash + place envirospawner in map

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -426,7 +426,7 @@ ResizeCard=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.Def
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -436,11 +436,11 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -2123,8 +2123,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
